--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -26,11 +26,12 @@
                 <br/><br/>
                 Select the industry you most closely associate with:
                 <select class="form-control m-b" ng-model="welcome.user.profile.parent" style="margin-bottom: 5px;" required>
-                    <option ng-repeat="parent in welcome.user.profile.parents">{{ parent }}</option>
+                    <option ng-repeat="parent in welcome.parents">{{ parent }}</option>
                 </select>
                 <div class="m-t-xs" ng-show="!welcome.user.profile.parent && welcome.submitted">
                     <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A parent is required.</span>
                 </div>
+                <br/>
                 Click below to edit your summary.
                 <br>
                 <span style="font-size: 13px;">Focus on the first sentence. It will be used on your profile page.</span>
