--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -39,7 +39,7 @@
                             <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A parent is required.</span>
                         </div>
                         <br>
-                        And a revenue stage (optional):
+                        And an investment stage (optional):
                         <select class="form-control m-b" ng-model="welcome.selectedCompany.stage" style="margin-bottom: 5px;">
                             <option ng-repeat="stage in welcome.stages">{{ stage }}</option>
                         </select>
