moved logmsg and fixed images

--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -31,7 +31,7 @@ body {
     top: 0;
     left: 0;
     background-color: white;
-    background: url('../images/office_table_wash.jpg') no-repeat center center;
+    background: url('/public/images/office_table_wash.jpg') no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
