--- a/app/components/common/welcome/welcome.html
+++ b/app/components/common/welcome/welcome.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="text-center m-b-md" style="margin-left: -15px;">
-                    <a href="/"><img style="width:75%" src="../images/sc_logo.png" alt="StartupCommunity.org Logo"/></a>
+                    <a href="/"><img style="width:75%" src="/public/images/sc_logo.png" alt="StartupCommunity.org Logo"/></a>
                 </div>
                 <div class="hpanel">
                     <div class="panel-body" style="padding: 20px; border-top: 1px solid #82bc4b;">
