--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -4,7 +4,7 @@
             profile:</h4><br/>
 
         <img class="img-circle m-b" style="height:75px;"
-             ngf-thumbnail="welcome.user.profile.avatar || file || 'images/blank_avatar.png'">
+             ngf-thumbnail="welcome.user.profile.avatar || file || '/public/images/blank_avatar.png'">
         <br/>
         <label id="uploader_text">
             <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
