--- a/app/components/users/user.dashboard.ask.questions.replies.html
+++ b/app/components/users/user.dashboard.ask.questions.replies.html
@@ -1,6 +1,6 @@
 <div class="media social-profile clearfix">
     <a class="pull-left">
-        <img ng-src="{{reply.from.avatar || 'images/blank_avatar.png'}}" alt="{{reply.from.name}}" ui-sref="user.dashboard({location_path: question.from.key, community: {}, profile: {}})">
+        <img ng-src="{{reply.from.avatar || '/public/images/blank_avatar.png'}}" alt="{{reply.from.name}}" ui-sref="user.dashboard({location_path: question.from.key, community: {}, profile: {}})">
     </a>
 
     <div class="media-body">
