--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 dash-table">
     <div>
         <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value })" title="View {{::item.value.profile.name | words:0}}'s Profile">
-            <img ng-src="{{item.value.profile.avatar || item.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='images/blank_avatar.png'"/>
+            <img ng-src="{{item.value.profile.avatar || item.value.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
         </a>
     </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
