--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -69,7 +69,7 @@
     <div class="modal-footer">
         <input ng-click="welcome.addCompany()" type="submit" class="finish btn-success btn pull-right" ng-class="{'disabled' : disabled || welcome.working || !welcome.selectedCompany}" value="{{ (welcome.updateCompany ? 'Update ' : 'Add ') + (welcome.selectedCompany.name || 'Company') }}"/>
         <button type="button" class="btn btn-default pull-right" style="margin-right: 15px;" ng-show="welcome.selectedCompany && !welcome.working" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined; welcome.alert = undefined; welcome.updateRole = false; welcome.selectedRole = 'none'; welcome.updateCompany = false; welcome.submitted = false;">Clear Form</button>
-        <div loading-bars ng-show="welcome.working" style="padding-top: 5px;"></div>
+        <div loading-bars ng-show="welcome.working" style="padding-top: 5px; float: left;"></div>
         <button type="button" class="btn btn-default pull-left" ng-click="$close();$state.reload();">Go Back</button>
     </div>
 </div>
