--- a/app/components/companies/company.dashboard.html
+++ b/app/components/companies/company.dashboard.html
@@ -10,8 +10,7 @@
                         <div class="col-sm-10 col-lg-11" style="padding-bottom: 15px;">
                             <div class="project-action" style="margin-right: -15px;">
                                 <div class="btn-group pull-right">
-                                    <a href="#"><i class="fa fa-angellist btn btn-default btn-xs"></i></a>
-                                    <a href="{{profile.company.profile.angellist.angellist_url}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
+                                    <a href="{{profile.company.profile.angellist.angellist_url}}"><i class="fa fa-angellist btn btn-default btn-xs"></i></a>
                                     </a>
                                 </div>
                             </div>
