fixed dash tooltip

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div ng-if="nav.location.profile.sc_logo"  data-intro="Project title" data-position="right" style="margin-left: -21px;"><img style="width:182px; border: 1px solid #ddd;" ng-src="{{nav.location.profile.sc_logo}}"/></div>
+            <div ng-if="nav.location.profile.sc_logo" style="margin-left: -21px;"><img style="width:182px; border: 1px solid #ddd;" ng-src="{{nav.location.profile.sc_logo}}"/></div>
         </div>
 
         <ul side-navigation class="nav" id="side-menu" style="border-top: 1px solid #eee;">
@@ -184,7 +184,7 @@
                 </ul>
             </li>
 
-            <li class="active" title="Primary Industries">
+            <li class="active">
                 <a style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
     padding-right: 7px;"></span><span class="nav-label">
 
