updated dash for embed

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -228,8 +228,8 @@
     <div ui-view >
         <div ng-style="{'background-color': nav.color}" ng-class="{'wrapper' : !nav.embedded}">
             <div class="splash" id="minorsplash"><div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div></div>
-            <div ng-class="{'embed_header' : nav.embedded}" ui-view="header"></div>
-            <div ng-class="{'content' : !nav.embedded}">
+            <div ng-class="{'embed_header' : nav.embedded}" ng-style="{'background-color': nav.color}" ui-view="header"></div>
+            <div ng-class="{'content' : !nav.embedded}" ng-style="{'background-color': nav.color}">
                 <div ui-view="content"></div>
             </div>
         </div>
