--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div small-header class="normalheader" ng-class="{'header-embedded' : nav.embedded}" style="padding: 25px 0;">
+<div small-header class="normalheader" style="padding: 25px 0;">
     <div class="row">
         <div class="col-md-6">
             <div class="hpanel">
