--- a/app/less/various.less
+++ b/app/less/various.less
@@ -648,6 +648,13 @@ footer, .push {
   text-align: center;
 }
 
+.profile-logo {
+  width:182px;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
 .stats-box div {
   display:inline-block;
   vertical-align:middle;
