--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -1,6 +1,6 @@
 <div tour backdrop="true" on-end="nav.end()">
     <!-- Header -->
-    <div id="header" ng-class="{'no-sides' : !nav.embedded}">
+    <div id="header">
         <div class="grey-line">
         </div>
         <div id="logo" class="light-version">
