--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -45,7 +45,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  border-bottom: 1px solid @border-color;
+  //border-bottom: 1px solid @border-color;
   border-left: 1px solid @border-color;
   border-right: 1px solid @border-color;
 }
@@ -66,7 +66,7 @@ body {
   margin: 0 0px 0 @menu-width;
   padding: 0;
   background: @color-background;
-  border-left: 1px solid @border-color;
+  border: 1px solid @border-color;
   //transition: all 0.4s ease 0s;
   position: relative;
   min-height: 100%;
