--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -46,8 +46,8 @@ body {
   padding: 0;
   position: relative;
   //border-bottom: 1px solid @border-color;
-  border-left: 1px solid @border-color;
-  border-right: 1px solid @border-color;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
 }
 
 #menu {
@@ -58,7 +58,8 @@ body {
   position: absolute;
   top: 62px;
   transition: all 0.4s ease 0s;
-  border-left: 1px solid @border-color;
+  border-left: 1px solid #eee;
+  border-bottom: 1px solid #eee;
 }
 
 
@@ -66,7 +67,7 @@ body {
   margin: 0 0px 0 @menu-width;
   padding: 0;
   background: @color-background;
-  border: 1px solid @border-color;
+  border: 1px solid #eee;
   //transition: all 0.4s ease 0s;
   position: relative;
   min-height: 100%;
@@ -99,7 +100,7 @@ body {
 
 .grey-line {
   height: 1px;
-  background: #E4E5E7;
+  background: #eee;
   background-size: 100% 4px;
   background-position: 50% 100%;
   background-repeat: no-repeat;
