--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -59,7 +59,7 @@ body {
   top: 62px;
   transition: all 0.4s ease 0s;
   border-left: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  //border-bottom: 1px solid #eee;
 }
 
 
