--- a/app/less/various.less
+++ b/app/less/various.less
@@ -634,7 +634,7 @@ footer, .push {
 
 #logo.light-version {
   background-color: @color-bright;
-  border-bottom: 1px solid @border-color;
+  border-bottom: 1px solid #eee;
   text-align: left;
 }
 
