--- a/app/components/companies/company.list.html
+++ b/app/components/companies/company.list.html
@@ -78,7 +78,7 @@
                         </li>
                         <hr style="margin: 10px 0 10px 0;">
                         <li ng-repeat="network in nav.networks" ng-class="{'active':companies.selectedNetworks.indexOf(network.key) >= 0}" ng-click="companies.allNetworks=false; companies.filterNetworks(network.key);">
-                            <a><i class="fa {{network.profile.icon}}"></i> {{network.profile.name}}</a>
+                            <a>{{network.profile.name}}</a>
                         </li>
                     </ul>
                 </div>
