--- a/app/less/various.less
+++ b/app/less/various.less
@@ -833,7 +833,7 @@ footer, .push {
 }
 
 .header-link {
-  padding: 23px 26px 18px 26px;
+  padding: 14px 26px 9px;
   font-size: 14px;
   float: left;
   border-right:1px solid @border-color;
