toggle nav on embed

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -833,7 +833,7 @@ footer, .push {
 }
 
 .header-link {
-  padding: 14px 26px 9px;
+  padding: 14px 26px 8px;
   font-size: 14px;
   float: left;
   border-right:1px solid @border-color;
@@ -841,7 +841,7 @@ footer, .push {
   //margin-right: 15px;
   background: @color-bright;
   cursor: pointer;
-  color: #999;
+  color: #aaa;
 }
 
 .header-link:hover {
