--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -170,7 +170,7 @@
 
 .small-header .panel-body {
   padding: 0 20px;
-  //border-top: none;
+  border-top: none;
   border-radius: 0;
   min-height: 35px;
   margin-bottom: 25px;
