--- a/app/less/style.less
+++ b/app/less/style.less
@@ -12,7 +12,7 @@
 @color-text: #6a6c6f;
 @color-bright: #f7f9fa;
 @color-background: #f1f3f6;
-@border-color: #e4e5e7;
+@border-color: #eee;
 
 // Additional variables
 @menu-width: 180px;
