--- a/app/less/various.less
+++ b/app/less/various.less
@@ -292,6 +292,7 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 .header-embedded {
   padding-left: 10px !important;
   padding-right: 10px !important;
+  border-top: 1px solid #eee !important;
 }
 
 .ui-select-highlight {
