now to add custom message

--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <div class="hpanel">
-            <div class="panel-heading" style="font-size: 20px;">Enter an email address:</div>
+            <div class="panel-heading" style="font-size: 20px;">Enter email addresses:</div>
             <div style="padding-bottom: 30px;">
                 <form role="form" name="invite.form" novalidate ng-submit="invite.inviteUser()">
                     <div class="form-group">
